- fix THREE's error "Cannot read property 'type' of undefined" with loader intersection in File WebGlRenderer file - splines for neurons energy path - fly / fps / lockmouse control - other adjustments

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,19 @@
 
-$cor: blue;
+$cor: green;
 $cor2: #ff000e;
 
 body{
+    margin: 0;
+    padding: 0;
+
+    height: 100vh;
+    width: 100vh;
     background: $cor;
     color: $cor2;
+    overflow: hidden;
+}
+.container{
+    display: block;
+    position: fixed;
+    z-index: 0;
 }
